Refactor index.html and update image source
Updated the HTML structure and fixed image path.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="hero-img">
-            <img src="C:\PORTFOLIO\myimage.jpeg" alt="Prashant Ghuge">
+            <img src="myimage.jpeg" alt="Prashant Ghuge">
         </div>
     </section>
 
@@ -227,5 +227,6 @@
     </footer>
 
 </body>
+
 
 </html>
